--- a/src/pages/components/data-table/style.mdx
+++ b/src/pages/components/data-table/style.mdx
@@ -8,16 +8,16 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Color
 
-| Element       | Property         | Color token        |
-| ------------- | ---------------- | ------------------ |
-| Table header  | background-color | `$layer`           |
-| Title         | text-color       | `$text-primary`    |
-| Description   | text-color       | `$text-secondary`  |
-| Column header | background-color | `$layer-accent`    |
-|               | text-color       | `$text-primary`    |
-| Row           | background-color | `$layer`           |
-|               | text-color       | `$text-secondary`  |
-|               | border-bottom    | `$border-subtle`   |
+| Element       | Property         | Color token       |
+| ------------- | ---------------- | ----------------- |
+| Table header  | background-color | `$layer`          |
+| Title         | text-color       | `$text-primary`   |
+| Description   | text-color       | `$text-secondary` |
+| Column header | background-color | `$layer-accent`   |
+|               | text-color       | `$text-primary`   |
+| Row           | background-color | `$layer`          |
+|               | text-color       | `$text-secondary` |
+|               | border-bottom    | `$border-subtle`  |
 
 <Row>
 <Column colLg={8}>
@@ -53,7 +53,9 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 |                       | text-color       | `$text-primary`         |
 | Row: selected + hover | background-color | `$layer-selected-hover` |
 
-For the batch action bar, refer to the [ghost button](https://carbondesignsystem.com/components/button/style#ghost-button) styling.
+For the batch action bar, refer to the
+[ghost button](https://carbondesignsystem.com/components/button/style#ghost-button)
+styling.
 
 <br>
 
