--- a/src/pages/components/data-table/style.mdx
+++ b/src/pages/components/data-table/style.mdx
@@ -53,11 +53,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 |                       | text-color       | `$text-primary`         |
 | Row: selected + hover | background-color | `$layer-selected-hover` |
 
-For the batch action bar, refer to the
-[ghost button](https://carbondesignsystem.com/components/button/style#ghost-button)
-styling.
-
-<br>
+For the batch action bar, refer to the [ghost button](https://carbondesignsystem.com/components/button/style#ghost-button) styling.
 
 <Row>
 <Column colLg={8}>
