docs: v11 color token updates for pagination component
This PR updates the color tokens on the style tab for the pagination component.

--- a/src/pages/components/pagination/style.mdx
+++ b/src/pages/components/pagination/style.mdx
@@ -8,12 +8,12 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Color
 
-| Class                          | Property         | Color token |
-| ------------------------------ | ---------------- | ----------- |
-| `.bx--pagination`              | background-color | `$ui-01`    |
-| `.bx--pagination`              | border-top       | `$ui-03`    |
-| `.bx--pagination__text`        | text color       | `$text-02`  |
-| `.bx--pagination__button-icon` | fill             | `$icon-01`  |
+| Class                          | Property         | Color token       |
+| ------------------------------ | ---------------- | ----------------- |
+| `.bx--pagination`              | background-color | `$layer`          |
+| `.bx--pagination`              | border-top       | `$border-subtle`  |
+| `.bx--pagination__text`        | text color       | `$text-secondary` |
+| `.bx--pagination__button-icon` | fill             | `$icon-primary`   |
 
 ## Typography
 
