--- a/src/pages/community/patterns/edit-pattern/index.mdx
+++ b/src/pages/community/patterns/edit-pattern/index.mdx
@@ -36,7 +36,7 @@ aspectRatio="4:3"
 hoverColor="dark"
 href="#narrow-tearsheet">
 
-![Narrow Tearsheet edit](images/Overview-NarrowTearsheet.png)
+![Narrow tearsheet edit](images/Overview-NarrowTearsheet.png)
 
 </ImageCard>
 
@@ -101,14 +101,14 @@ href="#full-page-edit">
 Choose the flow depending on the number, impact and intent of edits made.  
 Refer to [Behaviors](#behaviors) and [Best practices](#best-practices).
 
-| Type                                            | Usage                                                                                                                             | Context                                          |
-| ----------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------ |
-| [Inline edit](#inline-edit)                     | Use with quick, simple edits of individual fields.                                                                                | On-page content can be seen and interacted with. |
-| [Modal edit](#modal-edit)                       | Use with simple or transitional edits of no more than a couple of form fields.                                                    | On-page content is obscured.                     |
-| [Edit in side panel](#side-panel-edit)          | Use with medium complexity edits if the user needs page context.                                                                  | On-page content can be seen.                     |
-| [Edit in tearsheets](#tearsheet-edit)           | Use with medium to complex edits.                                                                                                 | On-page content is obscured.                     |
-| [Full-page or takeover edits](#full-page-edit)  | Use with edits to a usable service.                                                                                               | N/A                                              |
-| [Other edit behaviours](#other-edit-behaviours) | UI components with their own edit interaction patterns such as cards, dashboards, data tables, text editors and property editors. | N/A                                              |
+| Type                                           | Usage                                                                                                                             | Context                                          |
+| ---------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------ |
+| [Inline edit](#inline-edit)                    | Use with quick, simple edits of individual fields.                                                                                | On-page content can be seen and interacted with. |
+| [Modal edit](#modal-edit)                      | Use with simple or transitional edits of no more than a couple of form fields.                                                    | On-page content is obscured.                     |
+| [Edit in side panel](#side-panel-edit)         | Use with medium complexity edits if the user needs page context.                                                                  | On-page content can be seen.                     |
+| [Edit in tearsheets](#tearsheet-edit)          | Use with medium to complex edits.                                                                                                 | On-page content is obscured.                     |
+| [Full-page or takeover edits](#full-page-edit) | Use with edits to a usable service.                                                                                               | N/A                                              |
+| [Other edit behaviors](#other-edit-behaviours) | UI components with their own edit interaction patterns such as cards, dashboards, data tables, text editors and property editors. | N/A                                              |
 
 ## Inline edit
 
@@ -232,7 +232,7 @@ Do not use this pattern when:
 
 ## Other edit behaviors
 
-Some components have their own distinct edit behaviours.
+Some components have their own distinct edit behaviors.
 
 <Row className="image-card-group">
 
@@ -453,7 +453,7 @@ don't have impacts on other areas are considered low severity edits.  For low
 severity edits, the "always editable" or "batch edit"  patterns can be used
 (link to the patterns) Don't show a warning model for low severity edits
 
-High severity edits If behaviours, assets, components, workflows of the editor,
+High severity edits If behaviors, assets, components, workflows of the editor,
 or other people in the organization or the customer experience, will need to
 change because of the edits it is considered high severity edits. Changes that
 might trigger needing to edit something else are also considered high severity
@@ -494,7 +494,7 @@ the notifications pattern
 
 As the users are making edits, show immediate feedback about their changes as
 much as possible. Show inline errors when applicable, following validation and
-error pattern guidance.  Try to highlight errors that have dependants as early
+error pattern guidance.  Try to highlight errors that have dependents as early
 as possible.
 
 In the case that the "save changes" operation fails:
@@ -607,6 +607,32 @@ as".
 Versioning doesn't exist yet, but probably should.
 
 ## Terminology
+
+Refer to the
+[Cloud & Cognitive glossary of terms](https://pages.github.ibm.com/cdai-design/pal/content/terminology/approved-terms).
+
+**Edit:** Allows data or values to be changed.  
+_Avoid "Configure", "Change" etc._
+
+**Create new version:** Allows a new object to be created from the configuration
+of an existing object. The user can edit the configuration before the object is
+created.  
+_If changes are applied to the creation of a new object (not the current object)
+avoid using "edit" terminology. Instead, use "Create new version" or "Duplicate"
+followed by "Edit".  Avoid "Save as"._
+
+**Save:** Saves pending changes to a file, document or UI component.  
+_Avoid "Apply changes" and "Finish".  Do not use "Done", "Commit", "OK", or
+"Update"._
+
+**Cancel:** Stops the current action and closes the dialog.  
+_Avoid "Discard", "Clear", "Remove", "Reset", "Revert". Title pages/dialogs
+"Edit (object) (object name)" so that "the object "changes" does not need to be
+combined with the action "Cancel changes"._
+
+**Undo:** Reverts to the state before the most recent changes made by the
+user.  
+_Avoid "Restore", "Revert"._
 
 ## Accessibility
 
