--- a/src/pages/components/progress-indicator/style.mdx
+++ b/src/pages/components/progress-indicator/style.mdx
@@ -16,20 +16,20 @@ outlined circle.
 
 | Class                                                       | Property         | Color token       |
 | ----------------------------------------------------------- | ---------------- | ----------------- |
-| `.bx--progress-step--complete svg`                          | fill             | `$interactive-04` |
-| `.bx--progress-step--incomplete svg`                        | fill             | `$interactive-04` |
-| `.bx--progress-step--current` <br/> `.bx--progress-line`    | background-color | `$interactive-04` |
-| `.bx--progress-step--incomplete` <br/> `.bx--progress-line` | background-color | `$ui-03`          |
-| `.bx--progress-label`                                       | text color       | `$text-01`        |
-| `.bx--progress-optional`                                    | text color       | `$text-02`        |
+| `.bx--progress-step--complete svg`                          | fill             | `$interactive`    |
+| `.bx--progress-step--incomplete svg`                        | fill             | `$interactive`    |
+| `.bx--progress-step--current` <br/> `.bx--progress-line`    | background-color | `$interactive`    |
+| `.bx--progress-step--incomplete` <br/> `.bx--progress-line` | background-color | `$layer-accent`   |
+| `.bx--progress-label`                                       | text color       | `$text-primary`   |
+| `.bx--progress-optional`                                    | text color       | `$text-secondary` |
 
 ### Interactive states
 
-| Class                       | Property   | Color token   |
-| --------------------------- | ---------- | ------------- |
-| `.bx--progress-step:focus`  | border     | `$focus`      |
-| `.bx--progress-label:hover` | text color | `$link-01`    |
-| `.bx--progress__warning`    | fill       | `$support-01` |
+| Class                       | Property   | Color token      |
+| --------------------------- | ---------- | ---------------- |
+| `.bx--progress-step:focus`  | border     | `$focus`         |
+| `.bx--progress-label:hover` | text color | `$link-primary`  |
+| `.bx--progress__warning`    | fill       | `$support-error` |
 
 <div className="image--fixed">
 
