update: button guidance link

--- a/src/pages/components/data-table/style.mdx
+++ b/src/pages/components/data-table/style.mdx
@@ -44,18 +44,15 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ### Interactive states
 
-| Element               | Property         | Color token             |
-| --------------------- | ---------------- | ----------------------- |
-| Row: hover            | background-color | `$layer-hover`          |
-|                       | text-color       | `$text-primary`         |
-| Row: focus            | border           | `$focus`                |
-| Row: selected         | background-color | `$layer-selected`       |
-|                       | text-color       | `$text-primary`         |
-| Row: selected + hover | background-color | `$layer-selected-hover` |
-
-For the batch action bar, refer to the [ghost button](https://carbondesignsystem.com/components/button/style#ghost-button) styling.
-
-<br />
+| Element                  | Property                                                                                | Color token             |
+| ------------------------ | --------------------------------------------------------------------------------------- | ----------------------- |
+| Row: hover               | background-color                                                                        | `$layer-hover`          |
+|                          | text-color                                                                              | `$text-primary`         |
+| Row: focus               | border                                                                                  | `$focus`                |
+| Row: selected            | background-color                                                                        | `$layer-selected`       |
+|                          | text-color                                                                              | `$text-primary`         |
+| Row: selected + hover    | background-color                                                                        | `$layer-selected-hover` |
+| Batch action bar: button | See [ghost button](https://carbondesignsystem.com/components/button/style#ghost-button) |                         |
 
 <Row>
 <Column colLg={8}>
@@ -67,11 +64,11 @@ For the batch action bar, refer to the [ghost button](https://carbondesignsystem
 
 ## Typography
 
-| Class                     | Font-size (px/rem) | Font-weight    | Type token               |
-| ------------------------- | ------------------ | -------------- | ------------------------ |
-| `.bx--data-table-header`  | 20 / 1.25          | Regular / 400  | `$productive-heading-03` |
-| `.bx--table-header-label` | 14 / 0.875         | SemiBold / 600 | `$productive-heading-01` |
-| `.bx--data-table td`      | 14 / 0.875         | Regular / 400  | `$body-short-01`         |
+| Element       | Font-size (px/rem) | Font-weight    | Type token               |
+| ------------- | ------------------ | -------------- | ------------------------ |
+| Table header  | 20 / 1.25          | Regular / 400  | `$productive-heading-03` |
+| Column header | 14 / 0.875         | SemiBold / 600 | `$productive-heading-01` |
+| Row text      | 14 / 0.875         | Regular / 400  | `$body-short-01`         |
 
 ## Structure
 
@@ -80,13 +77,13 @@ choose certain elements and interactions. The basic table style is the required
 base from which tables can be developed. Basic tables are composed of a header
 row followed by rows of data below.
 
-| Class                                                                      | Property                    | px / rem | Spacing token |
-| -------------------------------------------------------------------------- | --------------------------- | -------- | ------------- |
-| `.bx--data-table-header`                                                   | margin-top                  | 16 / 1   | `$spacing-05` |
-| `.bx--data-table-header`                                                   | margin-bottom               | 24 / 1.5 | `$spacing-06` |
-| `.bx--data-table-header`                                                   | padding left, padding right | 16 / 1   | `$spacing-05` |
-| `.bx--table-sort-v2__icon`                                                 | padding                     | 8 / 0.5  | `$spacing-03` |
-| `.bx--data-table td:first-of-type` <br/> `.bx--data-table td:last-of-type` | padding-left, padding-right | 16 / 1   | `$spacing-05` |
+| Element               | Property                    | px / rem | Spacing token |
+| --------------------- | --------------------------- | -------- | ------------- |
+| Table header          | margin-top                  | 16 / 1   | `$spacing-05` |
+|                       | margin-bottom               | 24 / 1.5 | `$spacing-06` |
+|                       | padding left, padding right | 16 / 1   | `$spacing-05` |
+| Sort icon             | padding                     | 8 / 0.5  | `$spacing-03` |
+| Before and after text | padding-left, padding-right | 16 / 1   | `$spacing-05` |
 
 <div className="image--fixed">
 
@@ -123,12 +120,12 @@ Row sizes are customizable. The column header row `.bx--data-table thead` should
 always match the row size of the table. Tall row heights are only recommended if
 your data is expected to have 2 lines of content in a single row.
 
-| Class                      | Size    | Row Height (px/rem) |
-| -------------------------- | ------- | ------------------- |
-| `.bx--data-table--compact` | Compact | 24 / 1.5            |
-| `.bx--data-table--short`   | Short   | 32 / 2              |
-| `.bx--data-table tr`       | Default | 48 / 3              |
-| `.bx--data-table--tall`    | Tall    | 64 / 4              |
+| Size    | Row Height (px/rem) |
+| ------- | ------------------- |
+| Compact | 24 / 1.5            |
+| Short   | 32 / 2              |
+| Default | 48 / 3              |
+| Tall    | 64 / 4              |
 
 <Row>
 <Column colLg={8}>
@@ -144,15 +141,15 @@ After the simple table structure, tables can be enhanced by adding any of the
 following: selectable rows, expanding rows, nested tables, row menus, table
 batch actions, overall table menu, and/or table filter.
 
-| Class                           | Property                   | px / rem  | Spacing token |
-| ------------------------------- | -------------------------- | --------- | ------------- |
-| `.bx--checkbox-appearance`      | height, width              | 20 / 1.25 | –             |
-| `.bx--radio-button__appearance` | height, width              | 20 / 1.25 | –             |
-| `.bx--overflow-menu-options`    | height                     | 40 / 2.5  | –             |
-| `.bx--table-expand__svg`        | icon                       | 16 / 1    | –             |
-| `.bx--expandable-row`           | padding-top, padding-right | 16 / 1    | `$spacing-05` |
-| `.bx--expandable-row`           | padding-left               | 48 / 3    | `$spacing-09` |
-| `.bx--expandable-row`           | padding-bottom             | 24 / 1.5  | `$spacing-06` |
+| Element         | Property                   | px / rem  | Spacing token |
+| --------------- | -------------------------- | --------- | ------------- |
+| Checkbox        | height, width              | 20 / 1.25 | –             |
+| Radio button    | height, width              | 20 / 1.25 | –             |
+| Overflow menu   | height                     | 40 / 2.5  | –             |
+| Chevron icon    | svg                        | 16 / 1    | –             |
+| Row: expandable | padding-top, padding-right | 16 / 1    | `$spacing-05` |
+|                 | padding-left               | 48 / 3    | `$spacing-09` |
+|                 | padding-bottom             | 24 / 1.5  | `$spacing-06` |
 
 <div className="image--fixed">
 
@@ -167,12 +164,12 @@ batch actions, overall table menu, and/or table filter.
 The default 48px toolbar is paired with the tall and default row sizes. The
 small toolbar is paired with the short and compact row sizes.
 
-| Class                        | Property                  | px/rem  | Spacing token |
+| Element                      | Property                  | px/rem  | Spacing token |
 | ---------------------------- | ------------------------- | ------- | ------------- |
-| `.bx--toolbar-action`        | height, width             | 48 / 3  | –             |
-| `.bx--toolbar-action--small` | height, width             | 32 / 2  | –             |
-| `.bx--toolbar`               | margin-top, margin-bottom | 16 / 1  | `$spacing-05` |
-| `.bx--toolbar--small`        | margin-top, margin-bottom | 8 / 0.5 | `$spacing-03` |
+| Toolbar: large               | height, width             | 48 / 3  | –             |
+|                              | margin-top, margin-bottom | 16 / 1  | `$spacing-05` |        
+| Toolbar: small               | height, width             | 32 / 2  | –             |
+|                              | margin-top, margin-bottom | 8 / 0.5 | `$spacing-03` |
 
 <div className="image--fixed">
 
@@ -187,14 +184,14 @@ small toolbar is paired with the short and compact row sizes.
 The default 48px batch action bar is paired with the tall and default row sizes.
 The small batch action bar is paired with the short and compact row sizes.
 
-| Class                       | Property                    | px/rem | Spacing token |
-| --------------------------- | --------------------------- | ------ | ------------- |
-| `.bx--batch-actions`        | height                      | 48 / 3 | –             |
-| `.bx--batch-actions--small` | height                      | 32 / 2 | –             |
-| `.bx--batch-actions`        | padding-left, padding-right | 16 / 1 | `$spacing-05` |
-| `.bx--btn`                  | default size                | 48px   | –             |
-| `.bx--btn`                  | small size                  | 32px   | –             |
-| `.bx--btn__icon`            | padding-right               | 16/1   | `$spacing-05` |
+| Element                 | Property                    | px/rem | Spacing token |
+| ----------------------- | --------------------------- | ------ | ------------- |
+| Batch action bar: large | height                      | 48 / 3 | –             |
+| Button                  | size                        | 48px   | –             |
+| Batch action bar: small | height                      | 32 / 2 | –             |
+| Button                  | size                        | 32px   | –             |
+| Before and after text   | padding-left, padding-right | 16 / 1 | `$spacing-05` |
+| Button: icon            | padding-right               | 16 / 1 | `$spacing-05` |
 
 <div className="image--fixed">
 
