--- a/src/pages/components/data-table/style.mdx
+++ b/src/pages/components/data-table/style.mdx
@@ -116,16 +116,14 @@ columns. Tables require three or more columns.
 
 ### Rows
 
-Row sizes are customizable. The column header row `.bx--data-table thead` should
-always match the row size of the table. Tall row heights are only recommended if
-your data is expected to have 2 lines of content in a single row.
+Row sizes are customizable. The column header row should always match the row size of the table. Tall row heights are only recommended if your data is expected to have 2 lines of content in a single row.
 
-| Size    | Row Height (px/rem) |
-| ------- | ------------------- |
-| Compact | 24 / 1.5            |
-| Short   | 32 / 2              |
-| Default | 48 / 3              |
-| Tall    | 64 / 4              |
+| Element | Property | Size    | px / rem |
+| ------- | -------- | ------- | -------- |
+| Row     | height   | Compact | 24 / 1.5 |
+|         | height   | Short   | 32 / 2   |
+|         | height   | Default | 48 / 3   |
+|         | height   | Tall    | 64 / 4   |
 
 <Row>
 <Column colLg={8}>
@@ -164,12 +162,12 @@ batch actions, overall table menu, and/or table filter.
 The default 48px toolbar is paired with the tall and default row sizes. The
 small toolbar is paired with the short and compact row sizes.
 
-| Element                      | Property                  | px/rem  | Spacing token |
-| ---------------------------- | ------------------------- | ------- | ------------- |
-| Toolbar: large               | height, width             | 48 / 3  | –             |
-|                              | margin-top, margin-bottom | 16 / 1  | `$spacing-05` |        
-| Toolbar: small               | height, width             | 32 / 2  | –             |
-|                              | margin-top, margin-bottom | 8 / 0.5 | `$spacing-03` |
+| Element                      | Property                  | px / rem | Spacing token |
+| ---------------------------- | ------------------------- | -------- | ------------- |
+| Toolbar: large               | height, width             | 48 / 3   | –             |
+|                              | margin-top, margin-bottom | 16 / 1   | `$spacing-05` |        
+| Toolbar: small               | height, width             | 32 / 2   | –             |
+|                              | margin-top, margin-bottom | 8 / 0.5  | `$spacing-03` |
 
 <div className="image--fixed">
 
@@ -184,14 +182,14 @@ small toolbar is paired with the short and compact row sizes.
 The default 48px batch action bar is paired with the tall and default row sizes.
 The small batch action bar is paired with the short and compact row sizes.
 
-| Element                 | Property                    | px/rem | Spacing token |
-| ----------------------- | --------------------------- | ------ | ------------- |
-| Batch action bar: large | height                      | 48 / 3 | –             |
-| Button                  | size                        | 48px   | –             |
-| Batch action bar: small | height                      | 32 / 2 | –             |
-| Button                  | size                        | 32px   | –             |
-| Before and after text   | padding-left, padding-right | 16 / 1 | `$spacing-05` |
-| Button: icon            | padding-right               | 16 / 1 | `$spacing-05` |
+| Element                 | Property                    | px / rem | Spacing token |
+| ----------------------- | --------------------------- | -------- | ------------- |
+| Batch action bar: large | height                      | 48 / 3   | –             |
+| Button                  | size                        | 48px     | –             |
+| Batch action bar: small | height                      | 32 / 2   | –             |
+| Button                  | size                        | 32px     | –             |
+| Before and after text   | padding-left, padding-right | 16 / 1   | `$spacing-05` |
+| Button: icon            | padding-right               | 16 / 1   | `$spacing-05` |
 
 <div className="image--fixed">
 
