update charts version

--- a/src/pages/data-visualization/complex-charts/index.mdx
+++ b/src/pages/data-visualization/complex-charts/index.mdx
@@ -35,6 +35,7 @@ go to the
 <AnchorLink>Network diagrams</AnchorLink>
 <AnchorLink>Parallel coordinates</AnchorLink>
 <AnchorLink>Tree maps</AnchorLink>
+<AnchorLink>Circle packs</AnchorLink>
 <AnchorLink>Geospatial charts</AnchorLink>
 
 </AnchorLinks>
@@ -332,6 +333,25 @@ country, tourism for that country may fall below its annual average.
 
 </Column>
 </Row>
+
+## Circle packs
+
+A circle pack is a hierarchical visualization of data. It’s equivalent to a
+Treemap or a Dendrogram—where each node of the tree is represented as a circle
+and sub-nodes are represented as circles within a parent. The size of each
+circle can also be used to represent an additional arbitrary value, such as
+population or file size. Color may also be used to assign categories or to
+represent an additional variable. Although they’re not as space efficient,
+Circle Packs reveal hierarchical structure better than Treemaps.
+
+For Circle Packs with more than two levels of hierarchy, zoom functionality
+allows users to explore the data without compromising the contrast accessibility
+of the chart. We advise against disabling the zoom functionality except in cases
+such as preview charts, cards that expand to full view with the chart, etc.
+
+<div>
+  <ChartDemoGroup demoGroup={getDemoGroupByTitle('circlepack')} light={true} />
+</div>
 
 ## Geospatial charts
 
