--- a/src/pages/components/progress-indicator/style.mdx
+++ b/src/pages/components/progress-indicator/style.mdx
@@ -14,14 +14,14 @@ checkmark. The current step the user is on is indicated by a filled circle.
 Steps the user has not encountered yet, or future steps, are indicated by an
 outlined circle.
 
-| Class                                                       | Property         | Color token       |
-| ----------------------------------------------------------- | ---------------- | ----------------- |
-| `.bx--progress-step--complete svg`                          | fill             | `$interactive`    |
-| `.bx--progress-step--incomplete svg`                        | fill             | `$interactive`    |
-| `.bx--progress-step--current` <br/> `.bx--progress-line`    | background-color | `$interactive`    |
-| `.bx--progress-step--incomplete` <br/> `.bx--progress-line` | background-color | `$layer-accent`   |
-| `.bx--progress-label`                                       | text color       | `$text-primary`   |
-| `.bx--progress-optional`                                    | text color       | `$text-secondary` |
+| Class                                                       | Property         | Color token           |
+| ----------------------------------------------------------- | ---------------- | --------------------- |
+| `.bx--progress-step--complete svg`                          | fill             | `$interactive`        |
+| `.bx--progress-step--incomplete svg`                        | fill             | `$interactive`        |
+| `.bx--progress-step--current` <br/> `.bx--progress-line`    | background-color | `$border-interactive` |
+| `.bx--progress-step--incomplete` <br/> `.bx--progress-line` | background-color | `$border-subtle`      |
+| `.bx--progress-label`                                       | text color       | `$text-primary`       |
+| `.bx--progress-optional`                                    | text color       | `$text-secondary`     |
 
 ### Interactive states
 
