--- a/src/pages/components/search/style.mdx
+++ b/src/pages/components/search/style.mdx
@@ -12,14 +12,13 @@ Inputs come in two different colors. The default input color is `$field-01` and
 is used on `$ui-background` and `$ui-02` page backgrounds. The `--light` version
 input color is `$field-02` and is used on `$ui-01` page backgrounds.
 
-| Class                            | Property         | Color token |
-| -------------------------------- | ---------------- | ----------- |
-| `.bx--search-input`              | background-color | `$field` |
-| `.bx--search--light`             | background-color | `$background: inline theme` |
+| Class                            | Property         | Color token         |
+| -------------------------------- | ---------------- | --------------------|
+| `.bx--search-input`              | background-color | `$field`            |
 | `.bx--search-input`              | border-bottom    | `$border-strong`    |
-| `.bx--search-input`              | text color       | `$text-primary`  |
-| `.bx--search-input::placeholder` | text color       | `$text-placeholder`  |
-| `.bx--search-magnifier`          | fill             | `$icon-secondary`  |
+| `.bx--search-input`              | text color       | `$text-primary`     |
+| `.bx--search-input::placeholder` | text color       | `$text-placeholder` |
+| `.bx--search-magnifier`          | fill             | `$icon-secondary`   |
 
 <div className="image--fixed">
 
@@ -31,12 +30,12 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 
 ### Interactive colors
 
-| Class                            | Property         | Color token    |
-| -------------------------------- | ---------------- | -------------- |
-| `.bx--search-input:focus`        | border           | `$focus`       |
-| `.bx--search-input:disabled`     | background-color | `$field` |
-| `.bx--search-input:disabled`     | text color       | `$text-disabled` |
-| `.bx--search-magnifier:disabled` | fill             | `$icon-disabled` |
+| Class                            | Property         | Color token       |
+| -------------------------------- | ---------------- | ----------------- |
+| `.bx--search-input:focus`        | border           | `$focus`          |
+| `.bx--search-input:disabled`     | background-color | `$field-disabled` |
+| `.bx--search-input:disabled`     | text color       | `$text-disabled`  |
+| `.bx--search-magnifier:disabled` | fill             | `$icon-disabled`  |
 
 <div className="image--fixed">
 
