--- a/src/pages/components/search/style.mdx
+++ b/src/pages/components/search/style.mdx
@@ -26,7 +26,7 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 
 </div>
 
-<Caption>Example of Search using $field-01</Caption>
+<Caption>Example of Search using $field</Caption>
 
 ### Interactive colors
 
