--- a/src/pages/components/radio-button/style.mdx
+++ b/src/pages/components/radio-button/style.mdx
@@ -8,20 +8,20 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Color
 
-| Class                                   | Property         | Color token |
-| --------------------------------------- | ---------------- | ----------- |
+| Class                                   | Property         | Color token        |
+| --------------------------------------- | ---------------- | ------------------ |
 | `.bx--label`                            | text color       | `$text-secondary`  |
-| `.bx--radio-button__label`              | text color       | `$text-primary`  |
+| `.bx--radio-button__label`              | text color       | `$text-primary`    |
 | `.bx--radio-button__appearance`         | border           | `$icon-primary`    |
-| `.bx--radio-button__appearance`         | background-color | `$background`    |
-| `.bx--radio-button__appearance:checked` | border           | `$border-inverse`    |
+| `.bx--radio-button__appearance`         | background-color | `$background`      |
+| `.bx--radio-button__appearance:checked` | border           | `$icon-primary`    |
 | `.bx--radio-button__appearance::before` | dot              | `$icon-primary`    |
 
 ### Interactive colors
 
-| Class                                    | Property   | Color token    |
-| ---------------------------------------- | ---------- | -------------- |
-| `.bx--radio-button__appearance:focus`    | border     | `$focus`       |
+| Class                                    | Property   | Color token      |
+| ---------------------------------------- | ---------- | ---------------- |
+| `.bx--radio-button__appearance:focus`    | border     | `$focus`         |
 | `.bx--label:disabled`                    | text color | `$text-disabled` |
 | `.bx--radio-button__label:disabled`      | text color | `$text-disabled` |
 | `.bx--radio-button__appearance:disabled` | border     | `$icon-disabled` |
