--- a/src/pages/components/dropdown/style.mdx
+++ b/src/pages/components/dropdown/style.mdx
@@ -84,7 +84,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 | State    | Element       | Property         | Color token            |
 | -------- | ------------- | ---------------- | ---------------------- |
-| Enabled  | Field         | background-color | `transparent`          |
+| Enabled  | Field         | background-color | transparent            |
 |          | Field text    | text-color       | `$text-primary`        |
 |          | Chevron icon  | svg              | `$icon-primary`        |
 |          | Menu option   | text-color       | `$text-secondary`      |
