update: column header text and today token

--- a/src/pages/components/date-picker/style.mdx
+++ b/src/pages/components/date-picker/style.mdx
@@ -59,22 +59,22 @@ while invalid.
 
 ### Calendar menu
 
-| Element             | Property         | Color token                                |
-| ------------------- | ---------------- | ------------------------------------------ |
-| Calendar            | background-color | `$layer`                                   |
-| Calendar menu       | box-shadow       | `0 12px 24px 0` <br/> `rgba(0, 0, 0, 0.1)` |
-| Today               | text-color       | `$interactive`                             |
-| Day                 | text-color       | `$text-primary`                            |
-| Day: hover          | background-color | `$layer-hover`                             |
-| Day: focus          | border           | `$focus`                                   |
-| Day: selected       | text-color       | `$text-on-color`                           |
-|                     | background-color | `$background-brand`                        |
-| Day: disabled       | text-color       | `$text-disabled`                           |
-| Day: in range       | text-color       | `$text-on-color`                           |
-|                     | background-color | `$background-brand`                        |
-| Day: end range      | text-color       | `$text-primary`                            |
-|                     | border           | `$focus`                                   |
-| Day: next month day | text-color       | `$text-secondary`                          |
+| Element             | Property         | Color token                      |
+| ------------------- | ---------------- | -------------------------------- |
+| Calendar            | background-color | `$layer`                         |
+| Calendar menu       | box-shadow       | `0 2px 6px 0 rgba(0, 0, 0, 0.2)` |
+| Today               | text-color       | `$link-01`                       |
+| Day                 | text-color       | `$text-primary`                  |
+| Day: hover          | background-color | `$layer-hover`                   |
+| Day: focus          | border           | `$focus`                         |
+| Day: selected       | text-color       | `$text-on-color`                 |
+|                     | background-color | `$background-brand`              |
+| Day: disabled       | text-color       | `$text-disabled`                 |
+| Day: in range       | text-color       | `$text-primary`                  |
+|                     | background-color | `$highlight`                     |
+| Day: end range      | text-color       | `$text-primary`                  |
+|                     | border           | `$focus`                         |
+| Day: next month day | text-color       | `$text-secondary`                |
 
 <Row>
 <Column colLg={12}>
@@ -94,7 +94,7 @@ while invalid.
 Labels should be set in sentence case, with only the first word in a phrase and
 any proper nouns capitalized, and no more than three words.
 
-| Class         | Font-size  | Font-weight   | Type style  |
+| Element       | Font-size  | Font-weight   | Type token  |
 | ------------- | ---------- | ------------- | ----------- |
 | Label         | 12 / 0.75  | Regular / 400 | `$label-01` |             
 | Field text    | 14 / 0.875 | Regular / 400 | `$code-02`  |
@@ -140,16 +140,16 @@ The widths of the date inputs may vary based on the grid and layout.
 
 ### Calendar menu
 
-| Element    | Property                                 | px / rem | Spacing token |
-| ---------- | ---------------------------------------- | -------- | ------------- |
-| Calendar   | height                                   | 336 / 21 | –             |
-|            | width                                    | 288 / 18 | –             |
-|            | padding-top, padding-right, padding-left | 4 / 0.25 | `$spacing-02` |
-|            | padding-bottom                           | 8 / 0.5  | `$spacing-03` |
-| Icon       | height, width                            | 16 / 1   | –             |
-|            | padding-right, padding-left              | 16 / 1   | `$spacing-05` |
-| Day        | height, width                            | 40 / 2.5 | –             |
-| Today: dot | height, width                            | 4 / 0.25 | –             |
+| Element        | Property                                 | px / rem | Spacing token |
+| -------------- | ---------------------------------------- | -------- | ------------- |
+| Calendar       | height                                   | 336 / 21 | –             |
+|                | width                                    | 288 / 18 | –             |
+|                | padding-top, padding-right, padding-left | 4 / 0.25 | `$spacing-02` |
+|                | padding-bottom                           | 8 / 0.5  | `$spacing-03` |
+| Claendar: icon | height, width                            | 16 / 1   | –             |
+|                | padding-right, padding-left              | 16 / 1   | `$spacing-05` |
+| Day            | height, width                            | 40 / 2.5 | –             |
+| Today: dot     | height, width                            | 4 / 0.25 | –             |
 
 
 <div className="image--fixed">
